<resources>
    <string name="app_name">Todoc</string>
    <string name="label_action_filter">Filter</string>
    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Older first</string>
    <string name="sort_recent_first">Recent first</string>
    <string name="add">Add</string>
    <string name="no_task">No task to do</string>
    <string name="add_task">Add task</string>
    <string name="task_name_hint">Task name</string>
    <string name="dustbin_icon">Dustbin icon</string>

    <string name="tartampion_project">Tartampion Project</string>
    <string name="lucidia_project">Lucidia Project</string>
    <string name="circus_project">Circus Project</string>

    <string name="empty_name">Name shouldn\'t be empty !</string>

</resources>